--- a/index.html
+++ b/index.html
@@ -4,45 +4,33 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>U2C3</title>
+    <title>PT-WEB-05 C2</title>
     <link rel="stylesheet" href="index.css" />
-    
   </head>
   <body>
     <!-- Dont make any changes here -->
-    <h1>Masai Employee Records</h1>
+    <h1>Hospital - Doctor Records</h1>
 
     <div>
       <!-- ***** We are using form here  ****  -->
       <form>
-        <label for="">Employee Name</label><br />
-        <input id="name" type="text" placeholder="Enter Student Name" /><br />
-        <label for="">Employee ID</label><br />
+        <label for="">Doctor Name</label><br />
+        <input id="name" type="text" placeholder="Enter Doctor Name" /><br />
+        <label for="">Doctor ID</label><br />
         <input
-          id="employeeID"
+          id="docID"
           type="number"
-          placeholder="Enter Employee ID"
+          placeholder="Enter Doctor ID"
         /><br />
-        <label for="">Department </label><br />
-        <select id="department">
-          <option value="">Select Department</option>
-          <option value="Frontend">Frontend</option>
-          <option value="Backend">Backend</option>
-          <option value="Operations">Operations</option>
-          <option value="HR">HR</option>
-          <option value="IA">IA</option></select
+        <label for="">Specialization </label><br />
+        <select id="dept">
+          <option value="">Select Specialization</option>
+          <option value="Dermatologist">Dermatologist</option>
+          <option value="ENT">ENT</option>
+          <option value="Dentist">Dentist</option>
+          <option value="COVID">COVID</option>
+          <option value="Gynecologist">Gynecologist</option></select
         ><br />
-  
-        <label for="">Filter by Department </label><br />
-        <select id="filterDepartment">
-        <option value="">All Departments</option>
-        <option value="Frontend">Frontend</option>
-        <option value="Backend">Backend</option>
-        <option value="Operations">Operations</option>
-        <option value="HR">HR</option>
-        <option value="IA">IA</option>
-        </select><br />
-
         <label for="">Experience </label><br />
         <input id="exp" type="number" placeholder="Experience in Years" /><br />
         <label for="">Email Address </label><br />
@@ -56,8 +44,8 @@
         <thead>
           <tr>
             <th>Name</th>
-            <th>Employee ID</th>
-            <th>Department</th>
+            <th>Doctor ID</th>
+            <th>Specialization</th>
             <th>Experience in years</th>
             <th>Email address</th>
             <th>Mobile Number</th>
@@ -66,11 +54,11 @@
           </tr>
         </thead>
         <tbody>
-          <!-- Append your output here -->
+          <!-- ******* Append your output here ********* -->
         </tbody>
       </table>
     </div>
   </body>
 </html>
 
-<script src="record.js"></script>
+<script src="index.js"></script>
